fix narrative medium gallery on mobile

--- a/narrative/scss/style.scss
+++ b/narrative/scss/style.scss
@@ -552,7 +552,7 @@ h3.notion-heading {
         flex-direction: column!important;
     }
 
-    #page-index .notion-collection-gallery.medium {
+     .notion-collection-gallery.medium {
         grid-template-columns: 1fr!important;
     }
 } 
